fix: search input text color in dark mode

--- a/_static/styles.css
+++ b/_static/styles.css
@@ -619,6 +619,7 @@ kbd {
   .search {
     background: #333;
     border-color: #444;
+    color: var(--color-text-dark);
   }
 
   .fragment {
